[tool.poetry]
name = "mojo-networking"
description = "Automation Mojo Netorking Package (mojo-networking)"
version = "1.3.0"
authors = [
    "Myron Walker <myron.walker@gmail.com>"
]
readme = "README.md"
license = "LICENSE.txt"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX"
]
keywords = [
    "python"
]
packages = [{include="mojo", from="source/packages"}]

homepage = "http://automationmojo.com"
repository = "https://github.com/automationmojo/mojo-networking"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
netifaces = "^0.11.0"
requests = "<=2.31.0"

[tool.poetry.group.dev.dependencies]
myst-parser = "^0.18.1"
sphinx = ">=1.6,<6"
sphinx-rtd-theme = "^1.1.1"

[tool.poetry.group.dbio.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
